# backend-course-with-python

./: .gitignore  README.md
file_handling/: main.py  pyproject.toml
mangodb/: main.py  pyproject.toml
mangodb/confing/: db_connection.py
mangodb/models/: hussain.py
mangodb/routes/: hussain.py
mysql/: pyproject.toml
mysql/backend/: db_helper.py  main.py
